修改文案为网关和门禁都可用 发现获取设备状态写错了已修正 更新了停止窗帘的方法 重写了获取窗帘状态（之前没搞懂逻辑）

--- a/custom_components/dnake_ac_lan/translations/en.json
+++ b/custom_components/dnake_ac_lan/translations/en.json
@@ -5,11 +5,9 @@
                 "title": "Connect to Dnake Device",
                 "description": "Please enter your Dnake device connection details",
                 "data": {
-                    "ip_address": "Door Access IP Address",
-                    "auth_username": "Door Access Username",
-                    "auth_password": "Door Access Password",
-                    "iot_device_name": "Local IOT Name",
-                    "gw_iot_name": "Gateway IOT Name",
+                    "ip_address": "Gateway IP Address",
+                    "auth_username": "Gateway Access Username",
+                    "auth_password": "Gateway Access Password",
                     "scan_interval": "Status Refresh Interval (seconds)"
                 }
             }
